--- a/src/app/admin/edit/edit.page.html
+++ b/src/app/admin/edit/edit.page.html
@@ -115,7 +115,7 @@
       <ion-item>
         <ion-label position="stacked">Speed</ion-label>
         <ion-input type="text"
-                   [(ngModel)] = "param.RAM"
+                   [(ngModel)] = "param.speed"
                    name="speed"
                    required
                    #speedCtrl="ngModel"></ion-input>
