--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -23,6 +23,12 @@
         Saya mengerjakan sendiri, dengan bantuan modul week 1 sampai 7 dan referensi dari ionic documentation
         serta website lain. Saya menggunakan ion-slides untuk membuat foto carousel. 
         Libary luar yang saya pakai adalah npm long press untuk multi delete
+      </ion-item><br>
+      <ion-item>
+        Home : Melihat daftar storage dengan list ataupun grid, melihat detail storage dengan menekan salah satu storage, 
+        menggeser foto untuk melihat foto lain<br>
+        Admin : Melihat daftar storage dengan list, menambahkan storage dengan klik fab(+), mengupdate storage dengan slide 
+        ke kiri atau menekan salah satu storage, menghapus storage dengan slide ke kanan atau long press dan ceklis pada checkbox<br>
       </ion-item>
     </ion-col>
     <ion-row>
