--- a/src/app/admin/create/create.page.html
+++ b/src/app/admin/create/create.page.html
@@ -11,7 +11,7 @@
   <form #form="ngForm" (ngSubmit)="onSubmit(form)">
     <ion-list>
       <ion-item>
-        <ion-label position="stacked">URL Foto</ion-label>
+        <ion-label position="stacked">URL Foto (Separate with comma)</ion-label>
         <ion-input type="text"
                    ngModel
                    name="image"
